Initial commit for Spark Dating App
